--- a/index.html
+++ b/index.html
@@ -4,11 +4,22 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./dist/main.css" />
-  <title>Animals</title>
 </head>
 <body>
   <script src="./dist/main.js"></script>
-  <h1>Animals</h1>
+  <header>
+    <div id="title">
+      <h1 class="wiggle">WIGGLE</h1>
+      <h3 class="animals">Animals</h3>
+    </div>
+  </header>
+
+  <canvas id="koba" width="400" height="400"></canvas>
   <canvas id="penguin" width="300" height="300"></canvas>
+  <canvas id="monkey" width="300" height="300"></canvas>
+  <canvas id="hippo" width="400" height="400"></canvas>
+  <canvas id="lion" width="400" height="400"></canvas>
+  <canvas id="pickle" width="250" height="250"></canvas>
+  <canvas id="cow" width="400" height="400"></canvas>
 </body>
 </html>
