Made animal buttons and modals

--- a/index.html
+++ b/index.html
@@ -14,12 +14,63 @@
     </div>
   </header>
 
-  <canvas id="koba" width="400" height="400"></canvas>
-  <canvas id="penguin" width="300" height="300"></canvas>
-  <canvas id="monkey" width="300" height="300"></canvas>
-  <canvas id="hippo" width="400" height="400"></canvas>
-  <canvas id="lion" width="400" height="400"></canvas>
-  <canvas id="pickle" width="250" height="250"></canvas>
-  <canvas id="cow" width="400" height="400"></canvas>
+  <div class="buttons">
+    <button id="kobaBtn"><img id="kobaImg" src="" width="200" height="200"></button>
+    <button id="penguinBtn"><img id="penguinImg" src="" width="200" height="200"></button>
+    <button id="monkeyBtn"><img id="monkeyImg" src="" width="200" height="200"></button>
+    <button id="hippoBtn"><img id="hippoImg" src="" width="200" height="200"></button>
+    <button id="lionBtn"><img id="lionImg" src="" width="200" height="200"></button>
+    <button id="pickleBtn"><img id="pickleImg" src="" width="200" height="200"></button>
+    <button id="cowBtn"><img id="cowImg" src="" width="200" height="200"></button>
+  </div>
+  
+  <div id="kobaModal" class="modal">
+    <div class="modal-content">
+      <span id="closeKoba" class="closeModal">&times;</span>
+      <canvas id="koba" width="400" height="400"></canvas>
+    </div>
+  </div>
+
+  <div id="penguinModal" class="modal">
+    <div class="modal-content">
+      <span id="closePenguin" class="closeModal">&times;</span>
+      <canvas id="penguin" width="300" height="300"></canvas>
+    </div>
+  </div>
+
+  <div id="monkeyModal" class="modal">
+    <div class="modal-content">
+      <span id="closeMonkey" class="closeModal">&times;</span>
+      <canvas id="monkey" width="300" height="300"></canvas>
+    </div>
+  </div>
+
+  <div id="hippoModal" class="modal">
+    <div class="modal-content">
+      <span id="closeHippo" class="closeModal">&times;</span>
+      <canvas id="hippo" width="400" height="400"></canvas>
+    </div>
+  </div>
+
+  <div id="lionModal" class="modal">
+    <div class="modal-content">
+      <span id="closeLion" class="closeModal">&times;</span>
+      <canvas id="lion" width="400" height="400"></canvas>
+    </div>
+  </div>
+
+  <div id="pickleModal" class="modal">
+    <div class="modal-content">
+      <span id="closePickle" class="closeModal">&times;</span>
+      <canvas id="pickle" width="250" height="250"></canvas>
+    </div>
+  </div>
+
+  <div id="cowModal" class="modal">
+    <div class="modal-content">
+      <span id="closeCow" class="closeModal">&times;</span>
+      <canvas id="cow" width="400" height="400"></canvas>
+    </div>
+  </div>
 </body>
 </html>
