--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:title" content="Wiggle Animals" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://karapliu.github.io/wiggle-animals/" />
+  <meta property="og:image" content="./src/images/wiggle-animals.png" />
+  <meta property="og:description" content="Pickle is an online marketplace for guinea pig services!" />
   <link rel="stylesheet" href="./dist/main.css" />
 </head>
 <body>
